--- a/AbstractingEnemies/steps/step5.html
+++ b/AbstractingEnemies/steps/step5.html
@@ -10,7 +10,7 @@
     <h3>📋 Task: Update <code>check_collisions()</code></h3>
     <p>Your starter code already has a <code>boxes_colliding()</code> helper function and a <code>check_collisions()</code> function for the eyes. Now add collision detection for the first enemy. Add this code to your <code>check_collisions()</code> function (after the eye collision checks):</p>
 
-    <div class="code-block no-copy"><pre>-- Check collisions between lasers and the first enemy (NEW!)
+    <div class="code-block"><pre>-- Check collisions between lasers and the first enemy (NEW!)
 for ix, laser in pairs(lasers) do
   local enemy = enemies[1]
   if not enemy.isDestroyed then
