--- a/AbstractingEnemies/steps/step8.html
+++ b/AbstractingEnemies/steps/step8.html
@@ -10,7 +10,7 @@
     <h3>📋 Task 1: Update <code>init_enemies()</code></h3>
     <p>Add the eyes to the enemies table as enemies:</p>
 
-    <div class="code-block no-copy"><pre>function init_enemies()
+    <div class="code-block"><pre>function init_enemies()
   enemies = {}
 
   -- LEFT EYE - Now an enemy!
@@ -54,7 +54,7 @@ end</pre></div>
     <h3>📋 Task 3: Update Main Functions</h3>
     <p>Remove the calls to the old eye functions:</p>
 
-    <div class="code-block no-copy"><pre>init = function()
+    <div class="code-block"><pre>init = function()
   init_stars()
   init_player()
   init_enemies()   -- Now initializes eyes too!
