--- a/AbstractingEnemies/steps/step9.html
+++ b/AbstractingEnemies/steps/step9.html
@@ -8,7 +8,7 @@
     <h3>📋 Task: Create the random_enemy() Function</h3>
     <p>Add this function to your code (you can put it right after your <code>create_enemy()</code> function):</p>
 
-    <div class="code-block no-copy"><pre>function random_enemy()
+    <div class="code-block"><pre>function random_enemy()
   local enemy = create_enemy("enemy_ship", 32, 32)
 
   -- Random position anywhere on screen
