--- a/EnemySpawner/steps/step0.html
+++ b/EnemySpawner/steps/step0.html
@@ -52,14 +52,13 @@
     <div class="demo-container">
         <h3>Demo: Finished System</h3>
         <p>Here's what you'll create by the end of this lesson:</p>
-        <iframe
-            src="DEMO_URL_HERE"
-            width="100%"
-            height="400"
-            style="border: 2px solid #3a3a4e; border-radius: 6px; margin: 10px 0;">
-        </iframe>
+        <div id="step0-demo" style="margin: 10px 0;"></div>
         <p class="demo-caption">Play through a few waves to see dynamic spawning and escalating difficulty in action</p>
     </div>
+
+    <script>
+        createLazyEmbed('step0-demo', 'DEMO_URL_HERE', 400);
+    </script>
 
     <div class="success-box">
         <h3>Real Game Development</h3>
