chore: Step 8 complete

--- a/EnemySpawner/steps/step0.html
+++ b/EnemySpawner/steps/step0.html
@@ -57,7 +57,7 @@
     </div>
 
     <script>
-        createLazyEmbed('step0-demo', 'DEMO_URL_HERE', 400);
+        createLazyEmbed('step0-demo', 'https://microstudio.io/jocolloman/spawningenemies8/UPNXXGRY/', 400);
     </script>
 
     <div class="success-box">
